--- a/setting.html
+++ b/setting.html
@@ -48,33 +48,36 @@
                 <span class='range-slider__value'>-20</span>
         </div>                                                <div id="neu-border-style-options">
                                                         <p class="radio-title">Border style</p>
-                                                        <div class="radio-group">
-                                                                <div class='radio-button-wrapper'>
-        <input class='state' type='radio' name='app' id='solid-border' value='0'>
-        <label class='label' for='solid-border'>
-                <div class='indicator'></div>
-                <span class='text'></span>
-        </label>
-</div><div class='radio-button-wrapper'>
-        <input class='state' type='radio' name='app' id='double-border' value='1'>
-        <label class='label' for='double-border'>
-                <div class='indicator'></div>
-                <span class='text'></span>
-        </label>
-</div><div class='radio-button-wrapper'>
-        <input class='state' type='radio' name='app' id='dotted-border' value='2'>
-        <label class='label' for='dotted-border'>
-                <div class='indicator'></div>
-                <span class='text'></span>
-        </label>
-</div><div class='radio-button-wrapper'>
-        <input class='state' type='radio' name='app' id='dashed-border' value='3'>
-        <label class='label' for='dashed-border'>
-                <div class='indicator'></div>
-                <span class='text'></span>
-        </label>
-</div>                                                        </div>
-                                                </div>
+                                                        <div class='radio-group'>
+                        <div class='radio-button-wrapper'>
+                        <input class='state' type='radio' name='border-style' id='solid-border' value='0'>
+                        <label class='label' for='solid-border'>
+                                <div class='indicator'></div>
+                                <span class='text'></span>
+                        </label>
+                </div>
+                        <div class='radio-button-wrapper'>
+                        <input class='state' type='radio' name='border-style' id='double-border' value='1'>
+                        <label class='label' for='double-border'>
+                                <div class='indicator'></div>
+                                <span class='text'></span>
+                        </label>
+                </div>
+                        <div class='radio-button-wrapper'>
+                        <input class='state' type='radio' name='border-style' id='dotted-border' value='2'>
+                        <label class='label' for='dotted-border'>
+                                <div class='indicator'></div>
+                                <span class='text'></span>
+                        </label>
+                </div>
+                        <div class='radio-button-wrapper'>
+                        <input class='state' type='radio' name='border-style' id='dashed-border' value='3'>
+                        <label class='label' for='dashed-border'>
+                                <div class='indicator'></div>
+                                <span class='text'></span>
+                        </label>
+                </div>
+        </div>                                                </div>
                                                         <div class='range-slider'>
                 <label for='neu-border-width'>Border width</label>
                 <input class='range-slider__range' id='neu-border-width' type='range' min='0' max='10' step='0.1' value='0'>
