Normalize range slider & rename radio

--- a/setting.html
+++ b/setting.html
@@ -49,25 +49,25 @@
         </div>
                                                 <p>Border style</p>
                                                 <div class="radio-group-wrapper">
-                                                        <div class='radio-wrapper'>
+                                                        <div class='dui-radio'>
         <input class='state' type='radio' name='neu-border-style' id='solid-border' value='0'>
         <label class='label' for='solid-border'>
                 <div class='indicator'></div>
                 <span class='text'></span>
         </label>
-</div><div class='radio-wrapper'>
+</div><div class='dui-radio'>
         <input class='state' type='radio' name='neu-border-style' id='double-border' value='1'>
         <label class='label' for='double-border'>
                 <div class='indicator'></div>
                 <span class='text'></span>
         </label>
-</div><div class='radio-wrapper'>
+</div><div class='dui-radio'>
         <input class='state' type='radio' name='neu-border-style' id='dotted-border' value='2'>
         <label class='label' for='dotted-border'>
                 <div class='indicator'></div>
                 <span class='text'></span>
         </label>
-</div><div class='radio-wrapper'>
+</div><div class='dui-radio'>
         <input class='state' type='radio' name='neu-border-style' id='dashed-border' value='3'>
         <label class='label' for='dashed-border'>
                 <div class='indicator'></div>
