--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         </div>                                <div class="code-block">
         <pre><code class="language-php">&lt;?= RangeSlider(string $id, string $label, float $min = 0, float $max, float $step = 0.1, float $value = null); ?&gt;</code></pre>
 </div>
-                                <div class='radio-wrapper'>
-        <input class='state' type='radio' name='group-1' id='radio1-1' value='1'>
-        <label class='label' for='radio1-1'>
+                                <div class='dui-radio'>
+        <input class='state' type='radio' name='group-1' id='radio-1' value='1'>
+        <label class='label' for='radio-1'>
                 <div class='indicator'></div>
                 <span class='text'>Radio 1</span>
         </label>
-</div><div class='radio-wrapper'>
-        <input class='state' type='radio' name='group-1' id='radio1-2' value='2'>
-        <label class='label' for='radio1-2'>
+</div><div class='dui-radio'>
+        <input class='state' type='radio' name='group-1' id='radio-2' value='2'>
+        <label class='label' for='radio-2'>
                 <div class='indicator'></div>
                 <span class='text'>Radio 2</span>
         </label>
@@ -63,8 +63,8 @@
                                 <div class="code-block">
         <pre><code class="language-php">//            
 &lt;?=
-Radio(label: 'Radio 1', id: 'radio1-1', value: 1, group: 'group-1');
-Radio(label: 'Radio 2', id: 'radio1-2', value: 2, group: 'group-1');
+Radio(label: 'Radio 1', id: 'radio-1', value: 1, group: 'group-1');
+Radio(label: 'Radio 2', id: 'radio-2', value: 2, group: 'group-1');
 ?&gt;
 </code></pre>
 </div>
