--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
                                 <h5 class="my-4">IV - Form Components</h5>
                                 <div class="code-block">
         <pre><code class="language-php">&lt;?= include_once "components/form/_index.php";?&gt;</code></pre>
-</div>                                        <div class='range-slider'>
-                <label for='slider1'>Slider label</label>
+</div>        <div class='range-slider'>
+                <label for='slider1'>Slider</label>
                 <input class='range-slider__range' id='slider1' type='range' min='1' max='100' step='0.1' value='69'>
                 <span class='range-slider__value'>69</span>
-        </div>                                <div class="code-block">
-        <pre><code class="language-php">&lt;?= RangeSlider(string $id, string $label, float $min = 0, float $max, float $step = 0.1, float $value = null); ?&gt;</code></pre>
-</div>
-                                <div class='dui-radio'>
+        </div><div class="code-block">
+        <pre><code class="language-php">RangeSlider(string $id, string $label, float $min = 0, float $max, float $step = 0.1, float $value = null); </code></pre>
+</div><div class='dui-radio'>
         <input class='state' type='radio' name='group-1' id='radio-1' value='1'>
         <label class='label' for='radio-1'>
                 <div class='indicator'></div>
@@ -59,14 +58,19 @@
                 <div class='indicator'></div>
                 <span class='text'>Radio 2</span>
         </label>
-</div>                                <!-- TODO: Strip first empty line in the code block -->
-                                <div class="code-block">
+</div><div class="code-block">
         <pre><code class="language-php">//            
-&lt;?=
 Radio(label: 'Radio 1', id: 'radio-1', value: 1, group: 'group-1');
 Radio(label: 'Radio 2', id: 'radio-2', value: 2, group: 'group-1');
-?&gt;
 </code></pre>
+</div><label class="toggle-label">
+        <div class="toggle" id="demo-toggle">
+                <input class="toggle-state" type="checkbox" name="demo-toggle" value="" />
+                <div class="indicator"></div>
+        </div>
+        <div class="label-text">Toggle</div>
+</label><div class="code-block">
+        <pre><code class="language-php">Toggle(string $label, string $id, string $name = null, string $value = "");</code></pre>
 </div>
                                 <h5 class="my-4">V - Navigation Components</h5>
                                 <div class="code-block">
