--- a/setting.html
+++ b/setting.html
@@ -149,14 +149,13 @@
                         </div>
 
                         <div class="setting-save-panel">
-                                <label class="label">
-                                        <div class="toggle">
-                                                <input class="toggle-state" type="checkbox" name="check" value="check" />
-                                                <div class="indicator"></div>
-                                        </div>
-                                        <div class="label-text">Save</div>
-                                        <!-- TODO: Random button-->
-                                </label>
+                                <label class="toggle-label">
+        <div class="toggle" id="setting-save-button">
+                <input class="toggle-state" type="checkbox" name="setting-save-button" value="" />
+                <div class="indicator"></div>
+        </div>
+        <div class="label-text">Save</div>
+</label>                                <!-- TODO: Random button-->
                         </div>
                 </div>
         </div>
