Optional params for RangeSlider, Radio, Toggle functions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 </head>
 
 <body class="neu-style">
-                        
+                        <br />
+<b>Warning</b>:  include(utils/formatter.php): Failed to open stream: No such file or directory in <b>C:\Users\enginoobz\Desktop\portfolio\portfolio-website\pilling-parallax\dynamic-ui-framework\components\form\_index.php</b> on line <b>5</b><br />
+<br />
+<b>Warning</b>:  include(): Failed opening 'utils/formatter.php' for inclusion (include_path='C:\xampp\php\PEAR') in <b>C:\Users\enginoobz\Desktop\portfolio\portfolio-website\pilling-parallax\dynamic-ui-framework\components\form\_index.php</b> on line <b>5</b><br />
+
         <div class="display-table">
                 <div class="display-content">
                         <div class="container ">
@@ -65,7 +69,7 @@ Radio(label: 'Radio 2', id: 'radio-2', value: 2, group: 'group-1');
 </code></pre>
 </div><label class="toggle-label">
         <div class="toggle" id="demo-toggle">
-                <input class="toggle-state" type="checkbox" name="demo-toggle" value="" />
+                <input class="toggle-state" type="checkbox" name="demo-toggle" value="0" />
                 <div class="indicator"></div>
         </div>
         <div class="label-text">Toggle</div>
