--- a/setting.html
+++ b/setting.html
@@ -151,7 +151,7 @@
                         <div class="setting-save-panel">
                                 <label class="toggle-label">
         <div class="toggle" id="setting-save-button">
-                <input class="toggle-state" type="checkbox" name="setting-save-button" value="" />
+                <input class="toggle-state" type="checkbox" name="setting-save-button" value="0" />
                 <div class="indicator"></div>
         </div>
         <div class="label-text">Save</div>
