--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
 </head>
 
 <body class="neu-style">
-                        <br />
-<b>Warning</b>:  include(utils/formatter.php): Failed to open stream: No such file or directory in <b>C:\Users\enginoobz\Desktop\portfolio\portfolio-website\pilling-parallax\dynamic-ui-framework\components\form\_index.php</b> on line <b>5</b><br />
-<br />
-<b>Warning</b>:  include(): Failed opening 'utils/formatter.php' for inclusion (include_path='C:\xampp\php\PEAR') in <b>C:\Users\enginoobz\Desktop\portfolio\portfolio-website\pilling-parallax\dynamic-ui-framework\components\form\_index.php</b> on line <b>5</b><br />
-
+                        
         <div class="display-table">
                 <div class="display-content">
                         <div class="container ">
@@ -45,11 +41,13 @@
                                 <div class="code-block">
         <pre><code class="language-php">&lt;?= include_once "components/form/_index.php";?&gt;</code></pre>
 </div>        <div class='range-slider'>
-                <label for='slider1'>Slider</label>
-                <input class='range-slider__range' id='slider1' type='range' min='1' max='100' step='0.1' value='69'>
-                <span class='range-slider__value'>69</span>
+                <label for='dynamic-slider'>Dynamic slider</label>
+                <input class='range-slider__range' id='dynamic-slider' type='range' min='0' max='100' step='0.1' value='0'>
+                <span class='range-slider__value'>0</span>
         </div><div class="code-block">
-        <pre><code class="language-php">RangeSlider(string $id, string $label, float $min = 0, float $max, float $step = 0.1, float $value = null); </code></pre>
+        <pre><code class="language-php">// optional params: string $id = format($label), float $min = $value = 0, float $step = 0.1
+RangeSlider(label: "Dynamic slider",  max: 100);
+</code></pre>
 </div><div class='dui-radio'>
         <input class='state' type='radio' name='group-1' id='radio-1' value='1'>
         <label class='label' for='radio-1'>
@@ -63,18 +61,20 @@
                 <span class='text'>Radio 2</span>
         </label>
 </div><div class="code-block">
-        <pre><code class="language-php">//            
-Radio(label: 'Radio 1', id: 'radio-1', value: 1, group: 'group-1');
-Radio(label: 'Radio 2', id: 'radio-2', value: 2, group: 'group-1');
+        <pre><code class="language-php">// optional params: string $id = format($label)
+Radio(label: "Radio 1", value: 1, group: "group-1");
+Radio(label: "Radio 2", value: 2, group: "group-1");
 </code></pre>
 </div><label class="toggle-label">
-        <div class="toggle" id="demo-toggle">
-                <input class="toggle-state" type="checkbox" name="demo-toggle" value="0" />
+        <div class="toggle" id="dynamic-toggle">
+                <input class="toggle-state" type="checkbox" name="dynamic-toggle" value="0" />
                 <div class="indicator"></div>
         </div>
-        <div class="label-text">Toggle</div>
+        <div class="label-text">Dynamic toggle</div>
 </label><div class="code-block">
-        <pre><code class="language-php">Toggle(string $label, string $id, string $name = null, string $value = "");</code></pre>
+        <pre><code class="language-php">// optional params: string $id = $name = format($label), float $value = 0
+Toggle("Dynamic toggle");
+</code></pre>
 </div>
                                 <h5 class="my-4">V - Navigation Components</h5>
                                 <div class="code-block">
