--- a/setting.html
+++ b/setting.html
@@ -6,11 +6,11 @@
                                 <h6 class="text-center mt-0 mb-3">UI Style</h6>
                                 <!-- TODO: make buttons  equal widths -->
                                   <div class='button-border'>
-          <a href='#' class='button' id='flat-skin-button'>Flat</a>
+          <a href='javascript:;' class='button' id='flat-skin-button'>Flat</a>
   </div>  <div class='button-border'>
-          <a href='#' class='button' id='neu-skin-button'>Neumorphism</a>
+          <a href='javascript:;' class='button' id='neu-skin-button'>Neumorphism</a>
   </div>  <div class='button-border'>
-          <a href='#' class='button' id='glass-skin-button'>Glassmorphism</a>
+          <a href='javascript:;' class='button' id='glass-skin-button'>Glassmorphism</a>
   </div>                        </ul>
 
                         <div class="scrollable ">
@@ -151,7 +151,7 @@
                         <div class="setting-save-panel">
                                 <label class="toggle-label">
         <div class="toggle" id="setting-save-button">
-                <input class="toggle-state" type="checkbox" name="setting-save-button" value="0" />
+                <input class="toggle-state" type="checkbox" name="save" value="0" />
                 <div class="indicator"></div>
         </div>
         <div class="label-text">Save</div>
