--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class="neu-style">
-                        
+                                
         <div class="display-table">
                 <div class="display-content">
                         <div class="container ">
@@ -40,50 +40,54 @@
                                 <h5 class="my-4">IV - Form Components</h5>
                                 <div class="code-block">
         <pre><code class="language-php">&lt;?= include_once "components/form/_index.php";?&gt;</code></pre>
-</div>        <div class='range-slider'>
+</div><div class=" d-flex justify-content-center">
+                                <div class='range-slider'>
                 <label for='dynamic-slider'>Dynamic slider</label>
                 <input class='range-slider__range' id='dynamic-slider' type='range' min='0' max='100' step='0.1' value='0'>
                 <span class='range-slider__value'>0</span>
-        </div><div class="code-block">
+        </div>        </div><div class="code-block">
         <pre><code class="language-php">// optional params: string $id = format($label), float $min = $value = 0, float $step = 0.1
-RangeSlider(label: "Dynamic slider",  max: 100);
+echo RangeSlider(label: "Dynamic slider",  max: 100);
 </code></pre>
-</div><div class='dui-radio'>
+</div><div class=" d-flex justify-content-center">
+                        <div class='dui-radio'>
         <input class='state' type='radio' name='group-1' id='radio-1' value='1'>
         <label class='label' for='radio-1'>
                 <div class='indicator'></div>
                 <span class='text'>Radio 1</span>
         </label>
-</div><div class='dui-radio'>
+</div>                        <div class='dui-radio'>
         <input class='state' type='radio' name='group-1' id='radio-2' value='2'>
         <label class='label' for='radio-2'>
                 <div class='indicator'></div>
                 <span class='text'>Radio 2</span>
         </label>
-</div><div class="code-block">
-        <pre><code class="language-php">// optional params: string $id = format($label)
-Radio(label: "Radio 1", value: 1, group: "group-1");
-Radio(label: "Radio 2", value: 2, group: "group-1");
+</div>        </div><div class="code-block">
+        <pre><code class="language-php">// optional params: string $id = format($label)        
+echo Radio(label: "Radio 1", value: 1, group: "group-1");
+echo Radio(label: "Radio 2", value: 2, group: "group-1");
 </code></pre>
-</div><label class="toggle-label">
+</div><div class=" d-flex justify-content-center">
+                        <label class="toggle-label">
         <div class="toggle" id="dynamic-toggle">
                 <input class="toggle-state" type="checkbox" name="dynamic-toggle" value="0" />
                 <div class="indicator"></div>
         </div>
         <div class="label-text">Dynamic toggle</div>
-</label><div class="code-block">
+</label>        </div><div class="code-block">
         <pre><code class="language-php">// optional params: string $id = $name = format($label), float $value = 0
-Toggle(label: "Dynamic toggle");
+echo Toggle(label: "Dynamic toggle");
 </code></pre>
-</div><div class="checkbox">
+</div><div class=" d-flex justify-content-center">
+                        <div class="checkbox">
         <input id="dynamic-checkbox" type="checkbox" value="dynamic-checkbox">
         <label for="dynamic-checkbox">
                 <i class="fas fa-check"></i>
         </label>
         <div class="name">Dynamic checkbox</div>
-</div><div class="code-block">
+</div>        </div><div class="code-block">
         <pre><code class="language-php">// optional params: string $id = $value = format($name)
-Checkbox(name:"Dynamic checkbox");
+echo Checkbox(name:"Dynamic checkbox");
 </code></pre>
 </div>
                                 <h5 class="my-4">V - Navigation Components</h5>
